pegasus/src/Pegasus/Compiler/tests/invalidMOF/badQualifierDecl6.mof
/* Extra Comma in flavor, Syntax Error */
Qualifier Abstract : boolean = false, 
    Scope(class, association, indication), 
    Flavor(EnableOverride,Restricted, );
